--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -92,15 +92,15 @@ label{
 .radio-toolbar label {
 
   display: inline-block;
-  background-color: #ddd;
-  padding: 4px 11px;
-  font-family: "Muli";
+  background-color: #d6e592;
+  padding: 5px 16px;
+  font-family: "Arial";
   font-size: 16px;
   cursor: pointer;
 }
 
 .radio-toolbar input[type="radio"]:checked+label {
-  background-color: #bbb;
+  background-color: #232809;
 }
 
 
